update demo2 to use NDC db image
The latest image isn't working now so created a new image under a different tag for now. Will go back and fix at another date.

--- a/Demo2-MusicStoreApp/docker-compose.yml
+++ b/Demo2-MusicStoreApp/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - music-store-db
 
   music-store-db:
-    image: ashleypoole/musicstoredb:latest
+    image: ashleypoole/musicstoredb:ndc
     ports:
       - 1433:1433
     environment:
